--- a/ProyectoFinal54/src/Vista/VentanaLogin.form
+++ b/ProyectoFinal54/src/Vista/VentanaLogin.form
@@ -145,7 +145,7 @@
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imaganes/farmacia.png"/>
+                  <Image iconType="3" name="/imagenes/farmacia.png"/>
                 </Property>
               </Properties>
             </Component>
