--- a/ProyectoFinal54/src/Vista/VentanaEmpleado.form
+++ b/ProyectoFinal54/src/Vista/VentanaEmpleado.form
@@ -149,7 +149,7 @@
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imaganes/facturaD.png"/>
+                  <Image iconType="3" name="/imagenes/facturaD.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -217,7 +217,7 @@
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imaganes/usuarioP.png"/>
+                  <Image iconType="3" name="/imagenes/usuarioP.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -236,20 +236,20 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="facturacion2" max="32767" attributes="0"/>
+                      <Component id="productos" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="facturacion2" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
+                  <Component id="productos" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
                   <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JTextField" name="facturacion2">
+            <Component class="javax.swing.JTextField" name="productos">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="cc" green="66" red="0" type="rgb"/>
@@ -270,15 +270,15 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="facturacion2MouseClicked"/>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="facturacion2ActionPerformed"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="productosMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="productosActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel5">
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imaganes/prod.png"/>
+                  <Image iconType="3" name="/imagenes/prod.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -287,7 +287,7 @@
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imaganes/farmaciaP.png"/>
+              <Image iconType="3" name="/imagenes/farmaciaP.png"/>
             </Property>
           </Properties>
         </Component>
