--- a/ProyectoFinal54/src/Vista/InternalVentanaCliVen.form
+++ b/ProyectoFinal54/src/Vista/InternalVentanaCliVen.form
@@ -119,7 +119,7 @@
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imaganes/usuarioD.png"/>
+                  <Image iconType="3" name="/imagenes/usuarioD.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -458,12 +458,12 @@
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="7" rowCount="5">
-                    <Column editable="true" title="ID" type="java.lang.Object"/>
-                    <Column editable="true" title="Cedula" type="java.lang.Object"/>
-                    <Column editable="true" title="Nombre" type="java.lang.Object"/>
-                    <Column editable="true" title="Apellido" type="java.lang.Object"/>
-                    <Column editable="true" title="Celular" type="java.lang.Object"/>
-                    <Column editable="true" title="Telefono" type="java.lang.Object"/>
+                    <Column editable="true" title="ID" type="java.lang.Integer"/>
+                    <Column editable="true" title="Cedula" type="java.lang.String"/>
+                    <Column editable="true" title="Nombre" type="java.lang.String"/>
+                    <Column editable="true" title="Apellido" type="java.lang.String"/>
+                    <Column editable="true" title="Celular" type="java.lang.String"/>
+                    <Column editable="true" title="Telefono" type="java.lang.String"/>
                     <Column editable="true" title="Direccion" type="java.lang.Object"/>
                   </Table>
                 </Property>
