--- a/ProyectoFinal54/src/Vista/InternalVentanaFacturaVen.form
+++ b/ProyectoFinal54/src/Vista/InternalVentanaFacturaVen.form
@@ -245,8 +245,10 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="8" rowCount="3">
+                  <Table columnCount="10" rowCount="3">
                     <Column editable="false" title="Codigo de Barras" type="java.lang.String"/>
+                    <Column editable="false" title="Categoria" type="java.lang.String"/>
+                    <Column editable="false" title="Subcategoria" type="java.lang.String"/>
                     <Column editable="false" title="Nombre" type="java.lang.String"/>
                     <Column editable="false" title="Unidad de Compra" type="java.lang.String"/>
                     <Column editable="false" title="Unidad de Venta" type="java.lang.Object"/>
