--- a/ProyectoFinal54/src/Vista/VentanaEmpleado.form
+++ b/ProyectoFinal54/src/Vista/VentanaEmpleado.form
@@ -122,6 +122,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextField" name="facturacion">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="cc" green="66" red="0" type="rgb"/>
                 </Property>
@@ -251,6 +252,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextField" name="productos">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="cc" green="66" red="0" type="rgb"/>
                 </Property>
